# Kujo68K

./: LEGAL.md  README.md
Kujo68K/: CMakeLists.txt  decode.inl  ir_decode.inl  kujo68k.cpp  kujo68k.h  program_funcs.inl  programs.inl  tick.inl  tick68000.inl
generator/: gencode.cpp  instr_decode.inl  instr_names.inl
